# heysops

./: .gitignore  .heysops.yaml  .sops.yaml  CHANGELOG.md  Pipfile  setup.cfg
.github/workflows/: documentation.yml  release.yml  unittests.yml
docs/: conf.py  index.rst  modules.rst  user_guide.rst
libheysops/: __init__.py
libheysops/clean/: clean.py
libheysops/decrypt/: decrypt.py
libheysops/encrypt/: encrypt.py
libheysops/forget/: forget.py
libheysops/init/: init.py
sample/: test.txt.sops
tests/unittests/: test_base.py  test_clean.py  test_decrypt.py  test_encrypt.py  test_forget.py  test_heysops.py  test_init.py
