[bumpversion]
commit = True
tag = True
tag_name = {new_version}
current_version = 0.0.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(\.(?P<build>\d+))?)?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[metadata]
name = heysops
version = 0.0.1
author = Chapin Bryce
author_email = python@chapinb.com
url = https://github.com/chapinb/heysops
project_urls = 
	"Bug Tracker" = https://github.com/chapinb/heysops/issues
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sops, secrets
license = MIT License
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = 
	ruamel.yaml==0.17.13

[options.packages.find]
include = libheysops

[options.entry_points]
console_scripts = 
	heysops = libheysops.heysops:main

[options.extras_require]
dev = 
	black
	build
	pyre-check
	radon
	setuptool
	wheel

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:libheysops/__init__.py]

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	alpha
	beta
	gamma
